--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <h1>Raitec Elétrica</h1>
-        <img src="img/contato-2 1.svg" alt="Contado Whatsapp">
+        <img src="img/contato.svg" alt="Contado Whatsapp">
     </section>
     <section class="Destaque">
         <div class="header_destaque">
