nova cor do botão saiba mais

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 elétricos que trabalham a muito tempo com iss
             </p>
             <button>
-                <strong class="gradient-text ">Saiba Mais</strong>
+                <strong >Saiba Mais</strong>
             </button>
 
         </div>
